tests/paczka1/fuzzy1/36929777.err
Error in line 5: NE6kCm S607 10,6
Error in line 1: MgllzNx S884 96,1
Error in line 11: MgllzNx S690 30,5
Error in line 17: MgllzNx S607 77,7
Error in line 26: ALZChNeD S690 90,4
Error in line 20: DLuEbIeG S690 52,1
Error in line 34: S607 S191 41,6
Error in line 35: S607 S884 27,4
